# coherent-lasers

./: README.md  pyproject.toml
src/coherent_lasers/: __init__.py  api.py
src/coherent_lasers/app/: api.py  cli.py  main.py  server.py
src/coherent_lasers/common/hops/: README.md  __init__.py  hops_device.py
src/coherent_lasers/genesis/: base.py  commands.py  driver.py  mock.py
src/coherent_lasers/genesis_mx/: __init__.py  commands.py  driver.py  driver2.py  genesis_mx.py  genesis_mx_voxel.py  voxel.py  voxel_adapter.py
src/coherent_lasers/genesis_mx/app/: cli.py  server.old.py  server.py
src/coherent_lasers/hops/: __init__.py  cohrhops.py  lib.py  lib2.py
src/coherent_lasers/webapp/: api.py  app.py
tests/: lib2test.py  script.py  test_genesis_mx_voxel.py  test_script.py
webgui/: vite.config.ts
webgui/src/: App.svelte  chart.svelte.ts  laser.svelte.ts  state.svelte.ts  types.ts
webgui/src/lib/: DeliminatedInput.svelte  LaserCard.svelte  LaserCards.svelte  LasersInfo.svelte
webgui/src/lib/components/: DeliminatedInput.svelte
webgui/src/styles/: app.scss  colors.scss  typography.scss
